# Focus_Detection

./: .gitignore  CMakeLists.txt  README.md  ai_focus.py  focus_edge.py  focus_edge2.py  main.cpp  test_py.py
py_version/: focus_edge.py
